--- a/css/index.css
+++ b/css/index.css
@@ -32,3 +32,14 @@
 	height: 10vh;
 	font-size: 4vh;
 }
+
+.compileButton:hover {
+	background-color: green;
+	transform: scale(0.9);
+	transition-duration: 0.3s;
+}
+
+.compileButton:not(:hover) {
+	background-color: limegreen;
+	transition-duration: 0.3s;
+}
