added cell selecting, started adding figures moving

--- a/css/index.css
+++ b/css/index.css
@@ -1,3 +1,13 @@
+.unselectable {
+	-webkit-touch-callout: none; /* iOS Safari */
+	-webkit-user-select: none;   /* Chrome/Safari/Opera */
+	-khtml-user-select: none;    /* Konqueror */
+	-moz-user-select: none;      /* Firefox */
+	-ms-user-select: none;       /* Internet Explorer/Edge */
+	user-select: none;           /* Non-prefixed version, currently
+								  not supported by any browser */
+}
+
 .app {
 	display: flex;
 	flex-direction: row;
@@ -11,6 +21,14 @@
 
 .cell {
 	position: absolute;
+}
+
+.cell:not(.selected) {
+	filter: invert(0%);
+}
+
+.cell.selected {
+	filter: invert(80%);
 }
 
 .config {
