--- a/css/index.css
+++ b/css/index.css
@@ -40,7 +40,8 @@
 .config {
 	display: flex;
 	flex-direction: column;
-	margin: auto;
+	margin: 0 auto;
+	justify-content: space-around;
 }
 
 .configText {
