--- a/css/index.css
+++ b/css/index.css
@@ -39,8 +39,14 @@
 	filter: invert(0%);
 }
 
-.cellWithFigure.selected {
-	filter: invert(80%);
+.cellWithFigure .selector {
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	width: 100%;
+	height: 100%;
+	box-sizing: border-box;
+	z-index: 100;
 }
 
 .cell {
