--- a/css/index.css
+++ b/css/index.css
@@ -8,6 +8,14 @@
 								  not supported by any browser */
 }
 
+@font-face {
+  font-family: 'base_font';
+  font-style: normal;
+  font-weight: 400;
+  src: url(../SignikaNegative-Regular.ttf);
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
+}
+
 .app {
 	display: flex;
 	flex-direction: row;
@@ -18,16 +26,18 @@
 	display: flex;
 	flex-direction: column;
 	width: 50vw;
-	height: 100vh;
+	height: 99vh;
+	margin-top: 1vh;
 }
 
 .gameState {
 	margin: auto;
 	font-size: 5vh;
+	font-family: base_font;
 }
 
 .board {
-	margin: auto;
+	margin: 0 auto;
 	position: relative;
 	transition-duration: 0.5s;
 }
@@ -75,25 +85,32 @@
 .configText {
 	white-space: nowrap;
 	width: 45vw;
-	height: 70vh;
+	height: 65vh;
+	font-size: 16px;
 	resize: none;
 }
 
 .configsList {
-	font-size: 2vh;
-	height: 4vh;
+	font-size: 3vh;
+	height: 5vh;
+	font-family: base_font;
 }
 
 button {
 	height: 6vh;
-	font-size: 3vh;
+	font-family: base_font;
+	font-size: 3.5vh;
 }
 
+.configText,
+button,
+.configsList {
+	border: 0.3vmin solid black;
+	background-color: whitesmoke;
+	outline: none;
+}
+
+.configsList:hover,
 button:hover {
-	transform: scale(0.94);
-	transition-duration: 0.3s;
-}
-
-button:not(:hover) {
-	transition-duration: 0.3s;
+	border-width: 0.5vmin;
 }
